upload pdfs successfully

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "test": "echo \"No tests specified\" && exit 0"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "xml2js": "^0.6.0"
+    "@aws-sdk/client-s3": "^3.821.0",
+    "axios": "^1.9.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0"
